<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_with_shadow" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@drawable/header" android:layout_width="fill_parent" android:layout_height="48.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/header_logo" android:scaleType="centerInside" android:contentDescription="@string/app_name" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageView android:id="@id/cover" android:background="#00ffffff" android:focusable="false" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="15.0dip" android:layout_weight="1.0" android:contentDescription="@string/cover_art" />
        <ImageButton android:id="@id/adv_function" android:background="#00000000" android:layout_width="35.0dip" android:layout_height="35.0dip" android:src="@drawable/dots" android:scaleType="fitXY" android:onClick="showAdvanceFunction" />
        <LinearLayout android:gravity="bottom" android:orientation="vertical" android:paddingLeft="15.0dip" android:layout_width="90.0dip" android:layout_height="fill_parent">
            <ImageButton android:id="@id/shuffle" android:background="@android:color/transparent" android:padding="5.0dip" android:focusable="true" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginBottom="-5.0dip" android:src="@drawable/ic_shuffle" android:scaleType="fitXY" android:onClick="onShuffleClick" android:contentDescription="@string/shuffle" />
            <ImageButton android:id="@id/repeat" android:background="@android:color/transparent" android:padding="5.0dip" android:focusable="true" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="-5.0dip" android:layout_marginBottom="-5.0dip" android:src="@drawable/ic_repeat" android:scaleType="fitXY" android:onClick="onRepeatClick" android:contentDescription="@string/repeat" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="15.0dip">
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/time" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/time_0" android:layout_weight="1.0" android:onClick="onTimeLabelClick" />
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="right" android:id="@id/length" android:focusable="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/time_0" android:layout_weight="1.0" />
    </LinearLayout>
    <SeekBar android:id="@id/timeline" android:paddingLeft="15.0dip" android:paddingTop="5.0dip" android:paddingRight="15.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxHeight="4.0dip" android:progressDrawable="@drawable/po_seekbar" android:minHeight="4.0dip" android:thumb="@drawable/ic_seekbar_thumb" />
    <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:ellipsize="marquee" android:id="@id/title" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/title" android:singleLine="true" />
    <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:ellipsize="marquee" android:id="@id/artist" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/artist" android:singleLine="true" />
    <TextView android:textSize="18.0sp" android:textColor="#ff888888" android:ellipsize="marquee" android:id="@id/album" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/album" android:singleLine="true" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <ImageButton android:id="@id/previous" android:background="@android:color/transparent" android:focusable="true" android:layout_width="70.0dip" android:layout_height="70.0dip" android:src="@drawable/ic_backward" android:scaleType="fitXY" android:onClick="onPreviousClick" android:contentDescription="@string/previous" />
        <ImageButton android:id="@id/play_pause" android:background="@android:color/transparent" android:focusable="true" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_pause" android:scaleType="fitXY" android:onClick="onPlayPauseClick" android:contentDescription="@string/pause" />
        <ImageButton android:id="@id/stop" android:background="@android:color/transparent" android:focusable="true" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:src="@drawable/ic_stop" android:scaleType="fitXY" android:onClick="onStopClick" android:contentDescription="@string/stop" />
        <ImageButton android:id="@id/next" android:background="@android:color/transparent" android:focusable="true" android:layout_width="70.0dip" android:layout_height="70.0dip" android:src="@drawable/ic_forward" android:scaleType="fitXY" android:onClick="onNextClick" android:contentDescription="@string/next" />
    </LinearLayout>
</LinearLayout>